Corrections sonar